tests/ui/issues/issue-22370.stderr
error[E0393]: the type parameter `T` must be explicitly specified
  --> $DIR/issue-22370.rs:3:14
   |
LL | trait A<T=Self> {}
   | --------------- type parameter `T` must be specified for this
LL |
LL | fn f(a: &dyn A) {}
   |              ^
   |
   = note: because the parameter default references `Self`, the parameter must be specified on the object type
help: set the type parameter to the desired type
   |
LL | fn f(a: &dyn A<T>) {}
   |               +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0393`.
